# TrackMLN

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/ISSUE_TEMPLATE/: bug_report.md
installer/: .gitignore  index.html  package.json  vite.config.ts
installer/src/: App.tsx  installer-config.json  styles.css
installer/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
installer/src-tauri/capabilities/: default.json
installer/src-tauri/src/: main.rs
src/: App.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: app_names.rs  commands.rs  db.rs  main.rs  models.rs  settings.rs  tracker.rs
src/components/: AnnoyWindow.tsx  AppSelect.tsx  GoalOverlay.tsx  Goals.tsx  Settings.tsx  Sidebar.tsx  Today.tsx  WarnWindow.tsx  Week.tsx
src/hooks/: useDashboardScale.ts  useToday.ts  useWeek.ts
src/utils/: format.ts
